year4/#sem2/IDP/project/configs/auth/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
