year4/#sem2/IDP/project/configs/auth/auth-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auth
  annotations:
    konghq.com/strip-path: 'true'
spec:
  parentRefs:
  - name: kong
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /app/api
    backendRefs:
    - name: auth-service
      kind: Service
      port: 8080
